--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,11 +19,86 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      module.exports = {
+        theme: {
+          extend: {
+            colors: {
+              "regal-blue": "#243c5a",
+              "color-primary": "#FF4240",
+            },
+          },
+        },
+      };
+    </script>
     <style>
       body {
         font-family: "Manrope", sans-serif;
       }
     </style>
   </head>
-  <body></body>
+  <body class="container mx-auto">
+    <header>
+      <!-- nav bar starts  -->
+      <nav class="mb-12">
+        <div class="navbar bg-base-100">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+              >
+                <li>
+                  <a><span class="text-[#FF4240]">Home</span></a>
+                </li>
+                <li><a>About</a></li>
+                <li><a>Pages</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <h1 class="text-2xl font-extrabold">
+              Hockey<span class="text-[#FF4240]">'</span>s
+            </h1>
+          </div>
+          <div class="hidden navbar-center lg:flex">
+            <ul class="px-1 text-base menu menu-horizontal">
+              <li>
+                <a><span class="text-[#FF4240]">Home</span></a>
+              </li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <div class="navbar-end">
+            <div><img src="./images/Frame.png" alt="" /></div>
+            <button class="btn bg-[#FF4240] text-sm font-bold text-white ml-4">
+              Get Ticket
+            </button>
+          </div>
+        </div>
+      </nav>
+      <!-- nav bar ends  -->
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
