--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font awesome cdn  -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      rel="stylesheet"
+    />
     <script>
       module.exports = {
         theme: {
@@ -97,6 +102,57 @@
         </div>
       </nav>
       <!-- nav bar ends  -->
+
+      <!-- banner section starts  -->
+
+      <section>
+        <div class="lg:relative">
+          <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+              <img src="./images/1.png" class="w-full" />
+              <div class="absolute bottom-10 left-10">
+                <a
+                  href="#slide4"
+                  class="btn btn-circle bg-[#131318] text-white hover:text-[#131318]"
+                  ><i class="fa-solid fa-angle-left"></i
+                ></a>
+                <a
+                  href="#slide2"
+                  class="btn btn-circle bg-[#131318] text-white hover:text-[#131318]"
+                  ><i class="fa-solid fa-angle-right"></i
+                ></a>
+              </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="./images/1.png" class="w-full" />
+              <div class="absolute bottom-10 left-10">
+                <a
+                  href="#slide1"
+                  class="btn btn-circle bg-[#131318] text-white hover:text-[#131318]"
+                  ><i class="fa-solid fa-angle-left"></i
+                ></a>
+                <a
+                  href="#slide1"
+                  class="btn btn-circle bg-[#131318] text-white hover:text-[#131318]"
+                  ><i class="fa-solid fa-angle-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div
+            class="bg-black p-8 text-white space-y-4 lg:max-w-[550px] rounded-2xl lg:absolute right-8 bottom-8"
+          >
+            <h3 class="text-2xl font-extrabold">
+              Meet all the heroes from the field
+            </h3>
+            <p class="font-medium">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- banner section ends -->
     </header>
     <main></main>
     <footer></footer>
