professional hotkeys club section finished

--- a/index.html
+++ b/index.html
@@ -154,7 +154,83 @@
       </section>
       <!-- banner section ends -->
     </header>
-    <main></main>
+    <main>
+      <!-- professional hockeys club section starts  -->
+
+      <section class="my-12">
+        <div
+          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+        >
+          <div class="max-w-[600px] space-y-6 text-center">
+            <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
+            <p class="font-medium">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+
+        <!-- facilities percentages  -->
+        <div>
+          <div class="grid gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            <div class="text-center flex flex-col items-center">
+              <div
+                class="bg-[url('images/red-round.png')] bg-no-repeat mb-6 w-32 h-32 flex justify-center items-center"
+              >
+                <h2 class="font-extrabold text-2xl">87%</h2>
+              </div>
+              <div class="space-y-4">
+                <h3 class="text-xl font-semibold">Prayer Facility</h3>
+                <p class="font-medium">
+                  Amet consectetur. Condimentum dignissim adipiscing .
+                </p>
+              </div>
+            </div>
+            <div class="text-center flex flex-col items-center">
+              <div
+                class="bg-[url('images/green-round.png')] bg-no-repeat mb-6 w-32 h-32 flex justify-center items-center"
+              >
+                <h2 class="font-extrabold text-2xl">87%</h2>
+              </div>
+              <div class="space-y-4">
+                <h3 class="text-xl font-semibold">Experienced Coach</h3>
+                <p class="font-medium">
+                  Amet consectetur. Condimentum dignissim adipiscing .
+                </p>
+              </div>
+            </div>
+            <div class="text-center flex flex-col items-center">
+              <div
+                class="bg-[url('images/yellow-round.png')] bg-no-repeat mb-6 w-32 h-32 flex justify-center items-center"
+              >
+                <h2 class="font-extrabold text-2xl">87%</h2>
+              </div>
+              <div class="space-y-4">
+                <h3 class="text-xl font-semibold">Senior Player</h3>
+                <p class="font-medium">
+                  Amet consectetur. Condimentum dignissim adipiscing .
+                </p>
+              </div>
+            </div>
+            <div class="text-center flex flex-col items-center">
+              <div
+                class="bg-[url('images/blue-round.png')] bg-no-repeat mb-6 w-32 h-32 flex justify-center items-center"
+              >
+                <h2 class="font-extrabold text-2xl">87%</h2>
+              </div>
+              <div class="space-y-4">
+                <h3 class="text-xl font-semibold">Training Ground</h3>
+                <p class="font-medium">
+                  Amet consectetur. Condimentum dignissim adipiscing .
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- professional hockeys club section ends -->
+    </main>
     <footer></footer>
   </body>
 </html>
