--- a/index.html
+++ b/index.html
@@ -230,6 +230,62 @@
       </section>
 
       <!-- professional hockeys club section ends -->
+
+      <!-- program section starts  -->
+      <section>
+        <div
+          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+        >
+          <div class="max-w-[600px] space-y-6 text-center">
+            <h1 class="font-extrabold text-4xl">Program Sections</h1>
+            <p class="font-medium">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+        <div class="flex flex-col lg:flex-row gap-6">
+          <div class="flex-1 relative">
+            <div><img src="./images/2.png" alt="" /></div>
+            <div class="absolute bottom-10 left-10 text-white">
+              <h2 class="text-3xl font-extrabold mb-4">Junior Program</h2>
+              <p>
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button class="btn btn-primary mt-6">Register Now!</button>
+            </div>
+          </div>
+          <div class="flex-1 relative">
+            <div><img class="" src="./images/3.png" alt="" /></div>
+            <div class="absolute bottom-10 left-10 text-white">
+              <h2 class="text-3xl font-extrabold mb-4">Teenager Program</h2>
+              <p>
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button class="btn btn-primary mt-6">Register Now!</button>
+            </div>
+          </div>
+        </div>
+        <div class="relative mt-6">
+          <div><img class="" src="./images/4.png" alt="" /></div>
+          <div
+            class="absolute bottom-0 left-0 lg:bottom-10 lg:left-10 text-white"
+          >
+            <h2 class="text-3xl font-extrabold mb-4">Teenager Program</h2>
+            <p>
+              Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc
+              morbi nulla. Tortor congue sed et in.
+            </p>
+            <button class="btn btn-primary mt-6">Register Now!</button>
+          </div>
+        </div>
+      </section>
+      <!-- program section ends -->
     </main>
     <footer></footer>
   </body>
