--- a/index.html
+++ b/index.html
@@ -286,6 +286,202 @@
         </div>
       </section>
       <!-- program section ends -->
+
+      <!-- new product section starts  -->
+      <div
+        class="my-12 py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+      >
+        <div class="max-w-[600px] space-y-6 text-center">
+          <h1 class="font-extrabold text-4xl">Our New Products</h1>
+          <p class="font-medium">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div
+          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+        >
+          <div class="">
+            <img class="w-full" src="./images/5.png" alt="" />
+          </div>
+          <div>
+            <div class="flex items-center space-x-4">
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <p class="text-base font-medium">5.0</p>
+              <i class="fa-regular fa-eye"></i>
+              <p class="text-base font-medium">20</p>
+              <i class="fa-regular fa-heart"></i>
+              <p class="text-base font-medium">200</p>
+            </div>
+            <h3 class="my-2 text-xl font-extrabold">
+              World Cup Flags Football
+            </h3>
+            <p class="text-base font-medium mb-4">
+              Dolor sit amet consectetur. Ut urna diam quis sagittis.
+            </p>
+            <div class="flex items-center space-x-1">
+              <h3 class="text-xl font-extrabold text-[#FF4240]">
+                Price - $22.00
+              </h3>
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+        >
+          <div class="">
+            <img class="w-full" src="./images/6.png" alt="" />
+          </div>
+          <div>
+            <div class="flex items-center space-x-4">
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <p class="text-base font-medium">5.0</p>
+              <i class="fa-regular fa-eye"></i>
+              <p class="text-base font-medium">20</p>
+              <i class="fa-regular fa-heart"></i>
+              <p class="text-base font-medium">200</p>
+            </div>
+            <h3 class="my-2 text-xl font-extrabold">
+              World Cup Flags Football
+            </h3>
+            <p class="text-base font-medium mb-4">
+              Dolor sit amet consectetur. Ut urna diam quis sagittis.
+            </p>
+            <div class="flex items-center space-x-1">
+              <h3 class="text-xl font-extrabold text-[#FF4240]">
+                Price - $22.00
+              </h3>
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+        >
+          <div class="">
+            <img class="w-full" src="./images/7.png" alt="" />
+          </div>
+          <div>
+            <div class="flex items-center space-x-4">
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <p class="text-base font-medium">5.0</p>
+              <i class="fa-regular fa-eye"></i>
+              <p class="text-base font-medium">20</p>
+              <i class="fa-regular fa-heart"></i>
+              <p class="text-base font-medium">200</p>
+            </div>
+            <h3 class="my-2 text-xl font-extrabold">
+              World Cup Flags Football
+            </h3>
+            <p class="text-base font-medium mb-4">
+              Dolor sit amet consectetur. Ut urna diam quis sagittis.
+            </p>
+            <div class="flex items-center space-x-1">
+              <h3 class="text-xl font-extrabold text-[#FF4240]">
+                Price - $22.00
+              </h3>
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+        >
+          <div class="">
+            <img class="w-full" src="./images/8.png" alt="" />
+          </div>
+          <div>
+            <div class="flex items-center space-x-4">
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <p class="text-base font-medium">5.0</p>
+              <i class="fa-regular fa-eye"></i>
+              <p class="text-base font-medium">20</p>
+              <i class="fa-regular fa-heart"></i>
+              <p class="text-base font-medium">200</p>
+            </div>
+            <h3 class="my-2 text-xl font-extrabold">
+              World Cup Flags Football
+            </h3>
+            <p class="text-base font-medium mb-4">
+              Dolor sit amet consectetur. Ut urna diam quis sagittis.
+            </p>
+            <div class="flex items-center space-x-1">
+              <h3 class="text-xl font-extrabold text-[#FF4240]">
+                Price - $22.00
+              </h3>
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+        >
+          <div class="">
+            <img class="w-full" src="./images/9.png" alt="" />
+          </div>
+          <div>
+            <div class="flex items-center space-x-4">
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <p class="text-base font-medium">5.0</p>
+              <i class="fa-regular fa-eye"></i>
+              <p class="text-base font-medium">20</p>
+              <i class="fa-regular fa-heart"></i>
+              <p class="text-base font-medium">200</p>
+            </div>
+            <h3 class="my-2 text-xl font-extrabold">
+              World Cup Flags Football
+            </h3>
+            <p class="text-base font-medium mb-4">
+              Dolor sit amet consectetur. Ut urna diam quis sagittis.
+            </p>
+            <div class="flex items-center space-x-1">
+              <h3 class="text-xl font-extrabold text-[#FF4240]">
+                Price - $22.00
+              </h3>
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+        >
+          <div class="">
+            <img class="w-full" src="./images/10.png" alt="" />
+          </div>
+          <div>
+            <div class="flex items-center space-x-4">
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <p class="text-base font-medium">5.0</p>
+              <i class="fa-regular fa-eye"></i>
+              <p class="text-base font-medium">20</p>
+              <i class="fa-regular fa-heart"></i>
+              <p class="text-base font-medium">200</p>
+            </div>
+            <h3 class="my-2 text-xl font-extrabold">
+              World Cup Flags Football
+            </h3>
+            <p class="text-base font-medium mb-4">
+              Dolor sit amet consectetur. Ut urna diam quis sagittis.
+            </p>
+            <div class="flex items-center space-x-1">
+              <h3 class="text-xl font-extrabold text-[#FF4240]">
+                Price - $22.00
+              </h3>
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- new product section ends -->
     </main>
     <footer></footer>
   </body>
