client question section finished, but there have some issue for fixing later

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       }
     </style>
   </head>
-  <body class="container mx-auto">
+  <body class="container mx-auto px-5 md:px-0">
     <header>
       <!-- nav bar starts  -->
       <nav class="mb-12">
@@ -288,200 +288,257 @@
       <!-- program section ends -->
 
       <!-- new product section starts  -->
-      <div
-        class="my-12 py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
-      >
-        <div class="max-w-[600px] space-y-6 text-center">
-          <h1 class="font-extrabold text-4xl">Our New Products</h1>
-          <p class="font-medium">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
-          </p>
-        </div>
-      </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <section class="my-12">
         <div
-          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
         >
-          <div class="">
-            <img class="w-full" src="./images/5.png" alt="" />
-          </div>
-          <div>
-            <div class="flex items-center space-x-4">
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <p class="text-base font-medium">5.0</p>
-              <i class="fa-regular fa-eye"></i>
-              <p class="text-base font-medium">20</p>
-              <i class="fa-regular fa-heart"></i>
-              <p class="text-base font-medium">200</p>
-            </div>
-            <h3 class="my-2 text-xl font-extrabold">
-              World Cup Flags Football
-            </h3>
-            <p class="text-base font-medium mb-4">
-              Dolor sit amet consectetur. Ut urna diam quis sagittis.
+          <div class="max-w-[600px] space-y-6 text-center">
+            <h1 class="font-extrabold text-4xl">Our New Products</h1>
+            <p class="font-medium">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
             </p>
-            <div class="flex items-center space-x-1">
-              <h3 class="text-xl font-extrabold text-[#FF4240]">
-                Price - $22.00
+          </div>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <div
+            class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+          >
+            <div class="">
+              <img class="w-full" src="./images/5.png" alt="" />
+            </div>
+            <div>
+              <div class="flex items-center space-x-4">
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <p class="text-base font-medium">5.0</p>
+                <i class="fa-regular fa-eye"></i>
+                <p class="text-base font-medium">20</p>
+                <i class="fa-regular fa-heart"></i>
+                <p class="text-base font-medium">200</p>
+              </div>
+              <h3 class="my-2 text-xl font-extrabold">
+                World Cup Flags Football
               </h3>
-              <i class="fa-solid fa-cart-shopping"></i>
-              <p>Delivery Fee : Free</p>
+              <p class="text-base font-medium mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex items-center space-x-1">
+                <h3 class="text-xl font-extrabold text-[#FF4240]">
+                  Price - $22.00
+                </h3>
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p>Delivery Fee : Free</p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+          >
+            <div class="">
+              <img class="w-full" src="./images/6.png" alt="" />
+            </div>
+            <div>
+              <div class="flex items-center space-x-4">
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <p class="text-base font-medium">5.0</p>
+                <i class="fa-regular fa-eye"></i>
+                <p class="text-base font-medium">20</p>
+                <i class="fa-regular fa-heart"></i>
+                <p class="text-base font-medium">200</p>
+              </div>
+              <h3 class="my-2 text-xl font-extrabold">
+                World Cup Flags Football
+              </h3>
+              <p class="text-base font-medium mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex items-center space-x-1">
+                <h3 class="text-xl font-extrabold text-[#FF4240]">
+                  Price - $22.00
+                </h3>
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p>Delivery Fee : Free</p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+          >
+            <div class="">
+              <img class="w-full" src="./images/7.png" alt="" />
+            </div>
+            <div>
+              <div class="flex items-center space-x-4">
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <p class="text-base font-medium">5.0</p>
+                <i class="fa-regular fa-eye"></i>
+                <p class="text-base font-medium">20</p>
+                <i class="fa-regular fa-heart"></i>
+                <p class="text-base font-medium">200</p>
+              </div>
+              <h3 class="my-2 text-xl font-extrabold">
+                World Cup Flags Football
+              </h3>
+              <p class="text-base font-medium mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex items-center space-x-1">
+                <h3 class="text-xl font-extrabold text-[#FF4240]">
+                  Price - $22.00
+                </h3>
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p>Delivery Fee : Free</p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+          >
+            <div class="">
+              <img class="w-full" src="./images/8.png" alt="" />
+            </div>
+            <div>
+              <div class="flex items-center space-x-4">
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <p class="text-base font-medium">5.0</p>
+                <i class="fa-regular fa-eye"></i>
+                <p class="text-base font-medium">20</p>
+                <i class="fa-regular fa-heart"></i>
+                <p class="text-base font-medium">200</p>
+              </div>
+              <h3 class="my-2 text-xl font-extrabold">
+                World Cup Flags Football
+              </h3>
+              <p class="text-base font-medium mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex items-center space-x-1">
+                <h3 class="text-xl font-extrabold text-[#FF4240]">
+                  Price - $22.00
+                </h3>
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p>Delivery Fee : Free</p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+          >
+            <div class="">
+              <img class="w-full" src="./images/9.png" alt="" />
+            </div>
+            <div>
+              <div class="flex items-center space-x-4">
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <p class="text-base font-medium">5.0</p>
+                <i class="fa-regular fa-eye"></i>
+                <p class="text-base font-medium">20</p>
+                <i class="fa-regular fa-heart"></i>
+                <p class="text-base font-medium">200</p>
+              </div>
+              <h3 class="my-2 text-xl font-extrabold">
+                World Cup Flags Football
+              </h3>
+              <p class="text-base font-medium mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex items-center space-x-1">
+                <h3 class="text-xl font-extrabold text-[#FF4240]">
+                  Price - $22.00
+                </h3>
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p>Delivery Fee : Free</p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
+          >
+            <div class="">
+              <img class="w-full" src="./images/10.png" alt="" />
+            </div>
+            <div>
+              <div class="flex items-center space-x-4">
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <p class="text-base font-medium">5.0</p>
+                <i class="fa-regular fa-eye"></i>
+                <p class="text-base font-medium">20</p>
+                <i class="fa-regular fa-heart"></i>
+                <p class="text-base font-medium">200</p>
+              </div>
+              <h3 class="my-2 text-xl font-extrabold">
+                World Cup Flags Football
+              </h3>
+              <p class="text-base font-medium mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex items-center space-x-1">
+                <h3 class="text-xl font-extrabold text-[#FF4240]">
+                  Price - $22.00
+                </h3>
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p>Delivery Fee : Free</p>
+              </div>
             </div>
           </div>
         </div>
-        <div
-          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
-        >
-          <div class="">
-            <img class="w-full" src="./images/6.png" alt="" />
-          </div>
-          <div>
-            <div class="flex items-center space-x-4">
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <p class="text-base font-medium">5.0</p>
-              <i class="fa-regular fa-eye"></i>
-              <p class="text-base font-medium">20</p>
-              <i class="fa-regular fa-heart"></i>
-              <p class="text-base font-medium">200</p>
-            </div>
-            <h3 class="my-2 text-xl font-extrabold">
-              World Cup Flags Football
-            </h3>
-            <p class="text-base font-medium mb-4">
-              Dolor sit amet consectetur. Ut urna diam quis sagittis.
-            </p>
-            <div class="flex items-center space-x-1">
-              <h3 class="text-xl font-extrabold text-[#FF4240]">
-                Price - $22.00
-              </h3>
-              <i class="fa-solid fa-cart-shopping"></i>
-              <p>Delivery Fee : Free</p>
-            </div>
-          </div>
-        </div>
-        <div
-          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
-        >
-          <div class="">
-            <img class="w-full" src="./images/7.png" alt="" />
-          </div>
-          <div>
-            <div class="flex items-center space-x-4">
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <p class="text-base font-medium">5.0</p>
-              <i class="fa-regular fa-eye"></i>
-              <p class="text-base font-medium">20</p>
-              <i class="fa-regular fa-heart"></i>
-              <p class="text-base font-medium">200</p>
-            </div>
-            <h3 class="my-2 text-xl font-extrabold">
-              World Cup Flags Football
-            </h3>
-            <p class="text-base font-medium mb-4">
-              Dolor sit amet consectetur. Ut urna diam quis sagittis.
-            </p>
-            <div class="flex items-center space-x-1">
-              <h3 class="text-xl font-extrabold text-[#FF4240]">
-                Price - $22.00
-              </h3>
-              <i class="fa-solid fa-cart-shopping"></i>
-              <p>Delivery Fee : Free</p>
-            </div>
-          </div>
-        </div>
-        <div
-          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
-        >
-          <div class="">
-            <img class="w-full" src="./images/8.png" alt="" />
-          </div>
-          <div>
-            <div class="flex items-center space-x-4">
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <p class="text-base font-medium">5.0</p>
-              <i class="fa-regular fa-eye"></i>
-              <p class="text-base font-medium">20</p>
-              <i class="fa-regular fa-heart"></i>
-              <p class="text-base font-medium">200</p>
-            </div>
-            <h3 class="my-2 text-xl font-extrabold">
-              World Cup Flags Football
-            </h3>
-            <p class="text-base font-medium mb-4">
-              Dolor sit amet consectetur. Ut urna diam quis sagittis.
-            </p>
-            <div class="flex items-center space-x-1">
-              <h3 class="text-xl font-extrabold text-[#FF4240]">
-                Price - $22.00
-              </h3>
-              <i class="fa-solid fa-cart-shopping"></i>
-              <p>Delivery Fee : Free</p>
-            </div>
-          </div>
-        </div>
-        <div
-          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
-        >
-          <div class="">
-            <img class="w-full" src="./images/9.png" alt="" />
-          </div>
-          <div>
-            <div class="flex items-center space-x-4">
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <p class="text-base font-medium">5.0</p>
-              <i class="fa-regular fa-eye"></i>
-              <p class="text-base font-medium">20</p>
-              <i class="fa-regular fa-heart"></i>
-              <p class="text-base font-medium">200</p>
-            </div>
-            <h3 class="my-2 text-xl font-extrabold">
-              World Cup Flags Football
-            </h3>
-            <p class="text-base font-medium mb-4">
-              Dolor sit amet consectetur. Ut urna diam quis sagittis.
-            </p>
-            <div class="flex items-center space-x-1">
-              <h3 class="text-xl font-extrabold text-[#FF4240]">
-                Price - $22.00
-              </h3>
-              <i class="fa-solid fa-cart-shopping"></i>
-              <p>Delivery Fee : Free</p>
-            </div>
-          </div>
-        </div>
-        <div
-          class="flex flex-col md:flex-row p-6 rounded-2xl border border-gray-400 gap-5"
-        >
-          <div class="">
-            <img class="w-full" src="./images/10.png" alt="" />
-          </div>
-          <div>
-            <div class="flex items-center space-x-4">
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <p class="text-base font-medium">5.0</p>
-              <i class="fa-regular fa-eye"></i>
-              <p class="text-base font-medium">20</p>
-              <i class="fa-regular fa-heart"></i>
-              <p class="text-base font-medium">200</p>
-            </div>
-            <h3 class="my-2 text-xl font-extrabold">
-              World Cup Flags Football
-            </h3>
-            <p class="text-base font-medium mb-4">
-              Dolor sit amet consectetur. Ut urna diam quis sagittis.
-            </p>
-            <div class="flex items-center space-x-1">
-              <h3 class="text-xl font-extrabold text-[#FF4240]">
-                Price - $22.00
-              </h3>
-              <i class="fa-solid fa-cart-shopping"></i>
-              <p>Delivery Fee : Free</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      </section>
       <!-- new product section ends -->
+
+      <!-- clients question section starts  -->
+
+      <section class="my-12">
+        <div
+          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+        >
+          <div class="max-w-[600px] space-y-6 text-center">
+            <h1 class="font-extrabold text-4xl">Clients Question</h1>
+            <p class="font-medium">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+        <div
+          class="flex flex-col md:flex-row gap-10 p-8 border border-gray-400 rounded-lg"
+        >
+          <div>
+            <div>
+              <img class="w-full" src="./images/11.png" alt="" />
+            </div>
+          </div>
+          <div class="w-full flex flex-col gap-2 divide-y divide-slate-700">
+            <div class="collapse collapse-plus border-none rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-none rounded-none">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-none rounded-none">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- clients question section ends -->
     </main>
     <footer></footer>
   </body>
