get in touch section finished, there have some issues

--- a/index.html
+++ b/index.html
@@ -539,6 +539,115 @@
         </div>
       </section>
       <!-- clients question section ends -->
+
+      <!-- get in touch section starts  -->
+
+      <section class="my-12">
+        <div
+          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+        >
+          <div class="max-w-[600px] space-y-6 text-center">
+            <h1 class="font-extrabold text-4xl">Get In Touch</h1>
+            <p class="font-medium">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+
+        <!-- left and right divs  -->
+
+        <div class="flex flex-col md:flex-row gap-6">
+          <!-- left div starts -->
+          <div
+            class="flex flex-col p-12 border rounded-lg border-gray-400 gap-6"
+          >
+            <div class="bg-gray-400 p-8 rounded-lg">
+              <div class="mb-6">
+                <img src="./images/Group 1171275317.png" alt="" />
+              </div>
+              <p class="font-light text-sm">Phone Number :</p>
+              <h3 class="font-extrabold text-lg">(+62) 123-321-543</h3>
+            </div>
+            <div class="bg-gray-400 p-8 rounded-lg">
+              <div class="mb-6">
+                <img src="./images/Group 1171275317.png" alt="" />
+              </div>
+              <p class="font-light text-sm">Phone Number :</p>
+              <h3 class="font-extrabold text-lg">(+62) 123-321-543</h3>
+            </div>
+            <div class="bg-gray-400 p-8 rounded-lg">
+              <div class="mb-6">
+                <img src="./images/Group 1171275317.png" alt="" />
+              </div>
+              <p class="font-light text-sm">Phone Number :</p>
+              <h3 class="font-extrabold text-lg">(+62) 123-321-543</h3>
+            </div>
+          </div>
+
+          <!-- left div ends  -->
+
+          <!-- right div starts  -->
+          <div class="">
+            <!-- grid inputs  -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+              <div class="w-full md:w-[324px] h-16">
+                <h3 class="font-extrabold text-xl">Your Name</h3>
+                <input
+                  type="text"
+                  class="w-full h-full p-5 bg-gray-100 rounded-lg"
+                  placeholder="Enter Your Full Name"
+                />
+              </div>
+              <div class="w-full md:w-[324px] h-16">
+                <h3 class="font-extrabold text-xl">Your Name</h3>
+                <input
+                  type="text"
+                  class="w-full h-full p-5 bg-gray-100 rounded-lg"
+                  placeholder="Enter Your Full Name"
+                />
+              </div>
+              <div class="w-full md:w-[324px] h-16">
+                <h3 class="font-extrabold text-xl">Your Name</h3>
+                <input
+                  type="text"
+                  class="w-full h-full p-5 bg-gray-100 rounded-lg"
+                  placeholder="Enter Your Full Name"
+                />
+              </div>
+              <div class="w-full md:w-[324px] h-16">
+                <h3 class="font-extrabold text-xl">Your Name</h3>
+                <input
+                  type="text"
+                  class="w-full h-full p-5 bg-gray-100 rounded-lg"
+                  placeholder="Enter Your Full Name"
+                />
+              </div>
+            </div>
+
+            <!-- text area  -->
+            <div class="mt-12">
+              <h3 class="font-extrabold text-xl mb-4">Message</h3>
+              <div class="h-[200px] md:h-[425px] w-full">
+                <input
+                  class="h-full w-full bg-gray-100 rounded-lg"
+                  type="text"
+                  placeholder="Message"
+                />
+              </div>
+              <button
+                class="btn btn-primary w-full mt-8 bg-[#FF4240] border-none"
+              >
+                Send Message
+              </button>
+            </div>
+          </div>
+
+          <!-- right div ends  -->
+        </div>
+      </section>
+
+      <!-- get in touch section ends -->
     </main>
     <footer></footer>
   </body>
