social media section finished

--- a/index.html
+++ b/index.html
@@ -648,6 +648,22 @@
       </section>
 
       <!-- get in touch section ends -->
+
+      <!-- social media section starts  -->
+
+      <section class="my-12">
+        <div class="py-8 bg-[#13131808] space-y-6 text-center">
+          <h3 class="font-extrabold text-xl">Social Media</h3>
+          <div class="text-4xl space-x-6">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+          </div>
+        </div>
+      </section>
+
+      <!-- social media section ends -->
     </main>
     <footer></footer>
   </body>
