footer section finished,mobile resposnive spacing is to be fixed

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       }
     </style>
   </head>
-  <body class="container mx-auto px-5 md:px-0">
-    <header>
+  <body>
+    <header class="container mx-auto px-5 md:px-0">
       <!-- nav bar starts  -->
       <nav class="mb-12">
         <div class="navbar bg-base-100">
@@ -154,7 +154,8 @@
       </section>
       <!-- banner section ends -->
     </header>
-    <main>
+
+    <main class="container mx-auto px-5 md:px-0">
       <!-- professional hockeys club section starts  -->
 
       <section class="my-12">
@@ -665,6 +666,58 @@
 
       <!-- social media section ends -->
     </main>
-    <footer></footer>
+    <footer class="bg-green-300 py-24 px-20">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-[150px] justify-between">
+        <div class="space-y-4">
+          <h2 class="text-3xl font-extrabold">Get In Touch</h2>
+          <p>
+            Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
+            dolor. Purus urna in sit nullam proin.
+          </p>
+          <div class="flex items-center gap-4">
+            <i class="fa-regular fa-envelope text-2xl text-red-500"></i>
+            <p>hockeys@support.com</p>
+          </div>
+          <div class="flex items-center gap-4">
+            <i class="fa-solid fa-phone text-2xl text-red-500"></i>
+            <p>(+62) 123-321-543</p>
+          </div>
+        </div>
+        <!-- middle flex section starts -->
+        <div class="flex gap-[150px]">
+          <div>
+            <h2 class="text-lg font-bold">Company</h2>
+            <ul class="space-y-5">
+              <li><a href="">About Us</a></li>
+              <li><a href="">Leadership</a></li>
+              <li><a href="">Career</a></li>
+              <li><a href="">News & Article</a></li>
+              <li><a href="">Legal Notice</a></li>
+            </ul>
+          </div>
+          <div>
+            <h2 class="text-lg font-bold">Support</h2>
+            <ul class="space-y-5">
+              <li><a href="">Help Centre</a></li>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">Ticket Support</a></li>
+              <li><a href="">Contact Us</a></li>
+              <li><a href="">Legal Notice</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- middle flex section ends  -->
+        <div class="">
+          <h2 class="text-lg font-bold">Services</h2>
+          <ul class="space-y-5">
+            <li><a href="">Academy</a></li>
+            <li><a href="">Group Lesson</a></li>
+            <li><a href="">Private Lesson</a></li>
+            <li><a href="">Hockeys For Kids</a></li>
+            <li><a href="">Hokeys For Adult</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
