divider color updated

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
       <section class="my-12">
         <div
-          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+          class="py-8 border-dashed border-y-2 border[#13131833] flex justify-center mb-12"
         >
           <div class="max-w-[600px] space-y-6 text-center">
             <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
@@ -268,7 +268,7 @@
       <!-- program section starts  -->
       <section>
         <div
-          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+          class="py-8 border-dashed border-y-2 border[#13131833] flex justify-center mb-12"
         >
           <div class="max-w-[600px] space-y-6 text-center">
             <h1 class="font-extrabold text-4xl">Program Sections</h1>
@@ -324,7 +324,7 @@
       <!-- new product section starts  -->
       <section class="my-12">
         <div
-          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+          class="py-8 border-dashed border-y-2 border[#13131833] flex justify-center mb-12"
         >
           <div class="max-w-[600px] space-y-6 text-center">
             <h1 class="font-extrabold text-4xl">Our New Products</h1>
@@ -523,7 +523,7 @@
 
       <section class="my-12">
         <div
-          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+          class="py-8 border-dashed border-y-2 border[#13131833] flex justify-center mb-12"
         >
           <div class="max-w-[600px] space-y-6 text-center">
             <h1 class="font-extrabold text-4xl">Clients Question</h1>
@@ -578,7 +578,7 @@
 
       <section class="my-12">
         <div
-          class="py-8 border-dashed border-y-2 border-[#131800] flex justify-center mb-12"
+          class="py-8 border-dashed border-y-2 border[#13131833] flex justify-center mb-12"
         >
           <div class="max-w-[600px] space-y-6 text-center">
             <h1 class="font-extrabold text-4xl">Get In Touch</h1>
