--- a/index.html
+++ b/index.html
@@ -278,46 +278,61 @@
             </p>
           </div>
         </div>
+
+        <!-- flex images  -->
+
         <div class="flex flex-col lg:flex-row gap-6">
-          <div class="flex-1 relative">
-            <div><img src="./images/2.png" alt="" /></div>
-            <div class="absolute bottom-10 left-10 text-white">
-              <h2 class="text-3xl font-extrabold mb-4">Junior Program</h2>
-              <p>
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
-              </p>
-              <button class="btn btn-primary mt-6">Register Now!</button>
+          <!-- left side image  -->
+
+          <div class="hero flex-1 rounded-2xl overflow-hidden bg-cover h-full md:h-[338px]" style="background-image: url(images/2.png)">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-left text-neutral-content">
+              <div class="max-w-md">
+                <h1 class="mb-5 text-3xl font-bold">Junior Program</h1>
+                <p class="mb-5">
+                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                  assumenda excepturi exercitationem quasi. In deleniti eaque
+                  aut repudiandae et a id nisi.
+                </p>
+                <button class="btn btn-primary bg-[#FF4240] border-none">Register Now!</button>
+              </div>
             </div>
           </div>
-          <div class="flex-1 relative">
-            <div><img class="" src="./images/3.png" alt="" /></div>
-            <div class="absolute bottom-10 left-10 text-white">
-              <h2 class="text-3xl font-extrabold mb-4">Teenager Program</h2>
-              <p>
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
-              </p>
-              <button class="btn btn-primary mt-6">Register Now!</button>
+
+          <!-- right side image  -->
+          <div class="hero flex-1 rounded-2xl overflow-hidden bg-cover h-full md:h-[338px]" style="background-image: url(images/3.png)">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-left text-neutral-content">
+              <div class="max-w-md">
+                <h1 class="mb-5 text-3xl font-bold">Teenager Program</h1>
+                <p class="mb-5">
+                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                  assumenda excepturi exercitationem quasi. In deleniti eaque
+                  aut repudiandae et a id nisi.
+                </p>
+                <button class="btn btn-primary bg-[#FF4240] border-none">Register Now!</button>
+              </div>
             </div>
           </div>
         </div>
-        <div class="relative mt-6">
-          <div><img class="" src="./images/4.png" alt="" /></div>
-          <div
-            class="absolute bottom-0 left-0 lg:bottom-10 lg:left-10 text-white"
-          >
-            <h2 class="text-3xl font-extrabold mb-4">Teenager Program</h2>
-            <p>
-              Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
-              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc
-              morbi nulla. Tortor congue sed et in.
-            </p>
-            <button class="btn btn-primary mt-6">Register Now!</button>
+
+        <!-- bottom full image  -->
+
+        <div class="hero rounded-2xl relative overflow-hidden mt-6 bg-cover h-full md:h-[450px]" style="background-image: url(images/4.png)">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content absolute left-10 bottom-10  text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-3xl font-bold">Professional Program</h1>
+              <p class="mb-5">
+                Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                assumenda excepturi exercitationem quasi. In deleniti eaque
+                aut repudiandae et a id nisi.
+              </p>
+              <button class="btn btn-primary bg-[#FF4240] border-none">Register Now!</button>
+            </div>
           </div>
         </div>
+      </div>
       </section>
       <!-- program section ends -->
 
